2010-05-26  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs:
	* System.Windows.Data/CollectionViewGroupTest.cs: Add tests
	  for one item in multiple groups

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs: Add a bunch of
	  additional tests to verify that we handle ICollectionView
	  related selecting with ListBox correctly.

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: DPs which are of
	  Type::OBJECT do not perform a value equality check when
	  deciding if they should raise the property changed event or
	  not.

2010-05-21  Sebastien Pouliot  <sebastien@ximian.com>

	* System.ComponentModel/AsyncOperationTest.cs: New. Some test 
	about null handling.
	* System.ComponentModel/BackgroundWorkerTest.cs: New. Test
	where ReportProgress is called before the work is started

2010-05-21  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: This test passes now that we don't
	  throw a NotImplementedException.

2010-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* App.xaml.cs: Add something to InitParams so we can check on it
	later (to ensure we're getting back the same stuff, not a new 
	copy)
	* System.Windows.Interop/SilverlightHostTest.cs: Add test case
	for InitParams

2010-05-18  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/CollectionViewTest.cs: Add the ability
	  to add items to CollectionViewGroups while ignoring the
	  SortDescriptions. Fix several issues where we were getting
	  the index from the wrong collection which was breaking the
	  MoveCurentTo logic when elements were added/removed. Fixes
	  the new moon-units and more of drt 232.

2010-05-18  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/CollectionViewTest.cs: Fix up how we
	  insert items to the filtered collection when sorting is
	  enabled. In some cases we appear to binary search and insert